--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -91,9 +91,18 @@
               "node_modules/tailwindcss/base.css",
               "node_modules/tailwindcss/components.css",
               "node_modules/tailwindcss/utilities.css"
-            ]
-            ,
+            ],
             "scripts": []
+          }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "prerender": false,
+            "ssr": false,
+            "browserTarget": "frontend:build:production",
+            "firebaseProject": "app-vehicle-access-control",
+            "firebaseHostingSite": "app-vehicle-access-control"
           }
         }
       }
